# pre-push

./: README.md  main.py  pyproject.toml
core/: add_pre_push.py  constants.py  delete_pre_push.py
test/: pre_push.py
