[tool.poetry]
name = "pre-push"
version = "0.0.1"
description = ""
authors = ["Natan F. dos Santos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
inquirer = "^3.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
mypy = "^1.10.1"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
